@startuml DataModel
' Stereotypes: <<core,web>> = both DBs, <<web>> = Flask DB only
' Color: #B3E6FF for <<core,web>>, #FFE6B3 for <<web>>

entity User <<core,web>> #B3E6FF {
    * id : integer <<PK>>
    * email : string <<U, unique>>
    * username : string <<U, unique, nullable>>
    * name : string
    * role : string
    * is_active : boolean
}

entity Appointment <<core,web>> #B3E6FF {
    * id : integer <<PK>>
    * user_id : integer <<FK>>
    * start_time : datetime
    * end_time : datetime
    * subject : string
    * location_id : integer <<FK>>
    * category_id : integer <<FK>>
    * timesheet_id : integer <<FK>>
    * ms_event_id : string
    * recurrence : string
    * ms_event_data : json
    * is_private : boolean
    * is_archived : boolean
    * is_out_of_office : boolean
    * created_at : datetime
    * updated_at : datetime
}

entity Location <<core,web>> #B3E6FF {
    * id : integer <<PK>>
    * name : string
    * address : string
    * user_id : integer <<FK>>
}

entity Category <<core,web>> #B3E6FF {
    * id : integer <<PK>>
    * name : string
    * description : string
    * user_id : integer <<FK>>
}

entity Timesheet <<core,web>> #B3E6FF {
    * id : integer <<PK>>
    * user_id : integer <<FK>>
    * start_date : date
    * end_date : date
    * pdf_path : string
    * csv_path : string
    * excel_path : string
    * uploaded_to_onedrive : boolean
    * uploaded_to_xero : boolean
    * created_at : datetime
}

entity AuditLog <<web>> #FFE6B3 {
    * id : integer <<PK>>
    * user_id : integer <<FK>>
    * action : string
    * entity_type : string
    * entity_id : integer
    * timestamp : datetime
    * details : text
}

entity Rule <<web>> #FFE6B3 {
    * id : integer <<PK>>
    * user_id : integer <<FK>>
    * name : string
    * description : string
    * rule_json : text
    * created_at : datetime
}

entity Notification <<web>> #FFE6B3 {
    * id : integer <<PK>>
    * user_id : integer <<FK>>
    * message : string
    * type : string
    * channel : string
    * transaction_id : string
    * pct_complete : integer
    * progress : string
    * state : string
    * is_read : boolean
    * created_at : datetime
}

entity NotificationClass <<web>> #FFE6B3 {
    * id : integer <<PK>>
    * key : string <<U, unique>>
    * label : string
    * description : string
}

entity NotificationPreference <<web>> #FFE6B3 {
    * id : integer <<PK>>
    * user_id : integer <<FK>>
    * notification_class : string <<FK>>
    * channel : string
}

entity ArchivePreference <<web>> #FFE6B3 {
    * id : integer <<PK>>
    * user_id : integer <<FK, unique>>
    * ms_calendar_id : string
}

User ||--o{ Appointment : has
User ||--o{ Location : has
User ||--o{ Category : has
User ||--o{ Timesheet : has
User ||--o{ AuditLog : has
User ||--o{ Rule : has
User ||--o{ Notification : has
User ||--o{ NotificationPreference : has
User ||--o{ ArchivePreference : has

Appointment }o--|| Location : at
Appointment }o--|| Category : categorized_as
Appointment }o--|| Timesheet : timesheet
Timesheet ||--o{ Appointment : includes

NotificationPreference }o--|| NotificationClass : for
ArchivePreference }o--|| User : for

' Legend
legend
  == Stereotypes ==
  <color:#B3E6FF> <<core,web>> </color>  Entity in both Core and Web DBs
  <color:#FFE6B3> <<web>> </color>      Entity in Flask (Web) DB only
endlegend

@enduml 